<resources>
    <string name="app_name">MyLocalization</string>
    <string name="app_tittle">Registration</string>

    <string name="form_text">Fill in this form to register as user</string>
    <string name="form_name">Full name</string>
    <string name="form_email">Email Address</string>
    <string name="form_phone">Phone number</string>
    <string name="form_pwd">Password</string>
    <string name="form_check">I have read and agree the terms</string>

    <string name="btn_go">Submit</string>
    <string name="btn_lang">Set Language</string>
</resources>
